src/style/DropdownMenu.scss
@use "./Color";

.dropdown-menu {
    background-color: var(--bs-body-bg);
}

.flashcard-menu-button {
    min-width: calc(100vw / 3);
}

@media screen and (max-width: 576px) {
    .flashcard-menu-button-sm {
        width: calc(100vw / 3 - 0.5rem);
    }
}


@media screen and (min-width: 30rem) {
    .flashcard-menu-button {
        min-width: 10rem;
    }
}

.no-arrow-dropdown::after {
    display: none;
}

.fc-navbar-dropdown-trigger {
    cursor: pointer;
    width: min-content;
}

.fc-text-editor-bar-min-content {
    width: min-content;
}

#layout-toggle-button-disabled > a {
    color: var(--bs-secondary);
}

